// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[Contrib] layouts/<AdminMain /> should match snapshot 1`] = `
<div>
  <div
    class="sc-bdVaJa sc-bwzfXH Main__Container-q4q6nx-0 bBIrgk"
    style="height: 100vh;"
  >
    <div
      class="sc-bdVaJa sc-bwzfXH Main__Body-q4q6nx-1 ipFTgV"
      width="1"
    >
      <div
        class="sc-bdVaJa sc-bwzfXH Header__Container-sc-7cr55z-0 cBdCZD"
      >
        <div
          class="sc-bdVaJa sc-bwzfXH Header__Brand-sc-7cr55z-1 ccbJhB"
        >
          <img
            alt="Code du travail numérique"
            aria-label="Bouton de retour au tableau de bord"
            class="Header__Logo-sc-7cr55z-2 kAIypM"
            src="/static/images/marianne.svg"
          />
          <div
            class="sc-bdVaJa sc-bwzfXH eVPJMi"
          >
            <span
              class="Header__Title-sc-7cr55z-3 jGdlvq"
            >
              Code du travail numérique
            </span>
            <span
              class="Header__Subtitle-sc-7cr55z-4 kxPxIS"
            >
              Outil de contribution
            </span>
          </div>
        </div>
      </div>
      <div
        class="sc-bdVaJa sc-bwzfXH Main__Content-q4q6nx-2 iRsxhy"
      >
        <div
          class="sc-bdVaJa sc-bwzfXH AdminMenu__Container-t0dk93-0 dYccBZ"
        >
          <div
            class="AdminMenu__Link-t0dk93-2 LnAQE"
          >
            Tableau de bord
          </div>
          <div
            class="AdminMenu__Link-t0dk93-2 kospmv"
          >
            Conventions
          </div>
          <div
            class="AdminMenu__Link-t0dk93-2 kospmv"
          >
            Étiquettes
          </div>
          <div
            class="AdminMenu__Link-t0dk93-2 kospmv"
          >
            Questions
          </div>
          <div
            class="AdminMenu__Link-t0dk93-2 kospmv"
          >
            Réponses
          </div>
          <div
            class="AdminMenu__Link-t0dk93-2 kospmv"
          >
            Réponses génériques
          </div>
          <div
            class="AdminMenu__Link-t0dk93-2 kospmv"
          >
            Unités
          </div>
          <div
            class="AdminMenu__Link-t0dk93-2 kospmv"
          >
            Utilisateurs
          </div>
          <div
            class="AdminMenu__Link-t0dk93-2 kospmv"
          >
            Zones
          </div>
          <h2
            class="Subtitle-sc-17ig8qv-0 AdminMenu__Subtitle-t0dk93-1 vshUS"
          >
            Maintenance
          </h2>
          <div
            class="AdminMenu__Link-t0dk93-2 kospmv"
          >
            Migrations
          </div>
        </div>
        <div
          class="AdminMain__Content-lizrru-0 dcXFX"
        >
          Some Content Text
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`[Contrib] layouts/<AdminMain /> should match snapshot diff with \`hasBareContent\` prop 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -1,6 +1,6 @@
- <div>
+ <DocumentFragment>
    <div
      class=\\"sc-bdVaJa sc-bwzfXH Main__Container-q4q6nx-0 bBIrgk\\"
      style=\\"height: 100vh;\\"
    >
      <div
@@ -95,14 +95,10 @@
              class=\\"AdminMenu__Link-t0dk93-2 kospmv\\"
            >
              Migrations
            </div>
          </div>
-         <div
-           class=\\"AdminMain__Content-lizrru-0 dcXFX\\"
-         >
          Some Content Text
        </div>
      </div>
    </div>
-   </div>
- </div>
+ </DocumentFragment>"
`;

exports[`[Contrib] layouts/<AdminMain /> should match snapshot diff with \`isLoading\` prop 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -1,6 +1,6 @@
- <div>
+ <DocumentFragment>
    <div
      class=\\"sc-bdVaJa sc-bwzfXH Main__Container-q4q6nx-0 bBIrgk\\"
      style=\\"height: 100vh;\\"
    >
      <div
@@ -34,75 +34,23 @@
              </span>
            </div>
          </div>
        </div>
        <div
-         class=\\"sc-bdVaJa sc-bwzfXH Main__Content-q4q6nx-2 iRsxhy\\"
+         class=\\"sc-bdVaJa sc-bwzfXH Main__Content-q4q6nx-2 iaRbTA\\"
        >
          <div
-           class=\\"sc-bdVaJa sc-bwzfXH AdminMenu__Container-t0dk93-0 dYccBZ\\"
+           class=\\"LoadingSpinner__Container-eu7nmw-0 dEMrTz\\"
          >
            <div
-             class=\\"AdminMenu__Link-t0dk93-2 LnAQE\\"
-           >
-             Tableau de bord
-           </div>
+             class=\\"LoadingSpinner__Spinner-eu7nmw-1 sHZX\\"
+             color=\\"#666666\\"
+           />
            <div
-             class=\\"AdminMenu__Link-t0dk93-2 kospmv\\"
-           >
-             Conventions
+             class=\\"LoadingSpinner__Spinner-eu7nmw-1 LoadingSpinner__SpinnerNext-eu7nmw-2 daPQQA\\"
+             color=\\"#666666\\"
+           />
          </div>
-           <div
-             class=\\"AdminMenu__Link-t0dk93-2 kospmv\\"
-           >
-             Étiquettes
        </div>
-           <div
-             class=\\"AdminMenu__Link-t0dk93-2 kospmv\\"
-           >
-             Questions
      </div>
-           <div
-             class=\\"AdminMenu__Link-t0dk93-2 kospmv\\"
-           >
-             Réponses
    </div>
-           <div
-             class=\\"AdminMenu__Link-t0dk93-2 kospmv\\"
-           >
-             Réponses génériques
-           </div>
-           <div
-             class=\\"AdminMenu__Link-t0dk93-2 kospmv\\"
-           >
-             Unités
-           </div>
-           <div
-             class=\\"AdminMenu__Link-t0dk93-2 kospmv\\"
-           >
-             Utilisateurs
-           </div>
-           <div
-             class=\\"AdminMenu__Link-t0dk93-2 kospmv\\"
-           >
-             Zones
-           </div>
-           <h2
-             class=\\"Subtitle-sc-17ig8qv-0 AdminMenu__Subtitle-t0dk93-1 vshUS\\"
-           >
-             Maintenance
-           </h2>
-           <div
-             class=\\"AdminMenu__Link-t0dk93-2 kospmv\\"
-           >
-             Migrations
-           </div>
-         </div>
-         <div
-           class=\\"AdminMain__Content-lizrru-0 dcXFX\\"
-         >
-           Some Content Text
-         </div>
-       </div>
-     </div>
-   </div>
- </div>
+ </DocumentFragment>"
`;
